--- a/projects/medicalnft-frontend/.algokit.toml
+++ b/projects/medicalnft-frontend/.algokit.toml
@@ -3,7 +3,7 @@ min_version = "v2.0.0"
 
 [project]
 type = "frontend"
-name = 'medicalnft-frontend'
+name = 'nftcreate'
 artifacts = "src/contracts"
 
 [project.run]
