--- a/projects/medicalnft-frontend/package.json
+++ b/projects/medicalnft-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medicalnft-frontend",
+  "name": "nftcreate",
   "version": "0.1.0",
   "author": {
     "name": "rushikesh2k04",
@@ -17,7 +17,9 @@
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "vite": "^5.0.0",
@@ -30,15 +32,18 @@
     "@txnlab/use-wallet": "^4.0.0",
     "@txnlab/use-wallet-react": "^4.0.0",
     "algosdk": "^3.0.0",
+    "axios": "^1.9.0",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.309.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "tslib": "^2.6.2"
   },
   "scripts": {
-    "generate:app-clients": "algokit project link --all",
-    "dev": "npm run generate:app-clients && vite",
-    "build": "npm run generate:app-clients && tsc && vite build",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "eslintConfig": {
